fix: navbar content and wave overflow

--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -32,6 +32,8 @@
 
 .rotate_animation {
   animation: rotate 50s linear infinite;
+  
+  animation-play-state: paused;
 }
 
 .parent_logo1 {
@@ -46,6 +48,8 @@
 
 .roatate_circle_animation1 {
   animation: rotate_circle1 50s linear infinite;
+  
+  animation-play-state: paused;
 }
 
 .parent_logo2 {
@@ -60,6 +64,8 @@
 
 .roatate_circle_animation2 {
   animation: rotate_circle2 50s linear infinite;
+  
+  animation-play-state: paused;
 }
 
 @keyframes rotate {
@@ -190,7 +196,7 @@
   .backgroundContainer {
     background-image: url("../../Images/logoContainer.png");
     width: 100%;
-    height: 85vh;
+    height: 60vh;
     background-size: cover;
     background-repeat: no-repeat;
     padding: 0;
@@ -199,7 +205,7 @@
 
 @media (max-width: 640px) {
   .backgroundContainer {
-    height: 70vh;
+    height: 40vh;
   }
 }
 
